# MDK-Lib

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
SDKTest/: CMakeLists.txt  MDK.cpp  MDK.h  Memory.h  SDKTest.cpp  Singleton.h
SDKTest/MDK/MDK/: BasicType.h
scripts/: build
